[workspace]
members = [
    "programs/pyth-solana-receiver",
    "vendor/pyth-solana-receiver-sdk",
    "vendor/pythnet-sdk",
    "vendor/wormhole-core-bridge-stub",
]
resolver = "2"

# Mirrors cf-invariants-jito/Cargo.toml + cf-invariants-anchor/Cargo.toml
# release profile.
[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = 3
incremental = false

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
