[package]
name = "pyth_two_step_governance_fuzz"
version = "0.1.0"
edition = "2021"
description = "Crucible fuzz harness for pyth_receiver_ref — two_step_governance invariant on accept_governance_authority_transfer."
license = "Apache-2.0"

[workspace]

[dependencies]
# Pinned to upstream Crucible v0.2.0. Path deps assume the Crucible
# clone lives at `../../../../../crucible` (sibling-to-repo-root in CI;
# same convention as cf-invariants-jito / cf-invariants-anchor).
crucible-fuzzer       = { path = "../../../../../crucible/crates/crucible-fuzzer" }
crucible-test-context = { path = "../../../../../crucible/crates/crucible-test-context" }
anchor-lang = { version = "=1.0.1", features = ["init-if-needed"] }
arbitrary = { version = "1", features = ["derive"] }
ctrlc = "3.4"
libafl = { version = "0.15.1", features = ["std", "cli", "prelude"] }
libafl_bolts = { version = "0.15.1", features = ["std"] }
pyth-solana-receiver = { path = "../../programs/pyth-solana-receiver", features = ["no-entrypoint"] }
pyth-solana-receiver-sdk = { path = "../../vendor/pyth-solana-receiver-sdk" }
solana-keypair = "3.0"
solana-pubkey = "3.0"
solana-signer = "3.0"

[[bin]]
name = "invariant_test"
path = "src/main.rs"

[features]
invariant_two_step_governance_atomic = []
